Fix navigation button layout visibility

--- a/src/app/(main)/_components/banner/banner.css
+++ b/src/app/(main)/_components/banner/banner.css
@@ -117,7 +117,9 @@
 }
 
 .navigation-button {
-  @apply ease-quick relative h-2 w-6 px-2 py-1 transition-[width] duration-300;
+  box-sizing: initial;
+
+  @apply ease-quick relative z-50 h-2 w-6 px-2 py-1 transition-[width] duration-300;
 
   transform: translateZ(0);
 }
